fixed spacing of charts

--- a/src/styles.css
+++ b/src/styles.css
@@ -119,3 +119,10 @@ p {
   padding: 50px;
 	background-color: rgba(28, 28, 37, 0.6);
 }
+
+.sleepQuality-line-chart,
+.num-of-steps-chart,
+.num-mins-active-chart,
+.flights-climbed-chart {
+  padding-right: 20px;
+}
